crates/tych/src/tests/snapshots/unary_bad_type_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 652
expression: "(test[1], res)"
---
- "\nfn foo() {\n    -'c'\n}\n"
- Err: "Expected numeric type in unary operation `-`, got rhs: `char`"

